para_se_basear/Trab_Anna/CodeGeneration/Tests/Error/31.AMZ
// error
int func1() {
	int a = 1 + 2;
	a = 1 + "a"; // error
	return 1;
}

// error
int func2(string s) {
	int a = false; // error
	s = 10; // error
	return 1;
}
